--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1>Located In Rome</h1>
+                        <h1>482 Oak Street</h1>
                         <p>8 Bedrooms, 5 Bathrooms, Office Room Attic, Laudry Room, Kitchen, Living Room, Balcony, Huge Garden With Ocean View </p>
                     </div>
                 </div>
@@ -145,7 +145,19 @@
             </div>
             <div class="properties-container-rome-house">
                 <div class="estate-photo">
-                    
+                    <img src="../photos/rome-estate.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>232 Meyers Street</h1>
+                        <p>Old Architecture, Highly Modern, 4 Bedrooms, 3 Bathrooms, Kithcen, Linving Room, Laudry Room, Outdoor Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
                 </div>
             </div>
         </div>
