--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -160,6 +160,23 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-container-rome-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/rome-mansion-sale.avif">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>450 Voorhees Street</h1>
+                        <p>13 Bedrroms, 15 Bathrooms, 3 Office Rooms, Kithcen, Living Room, Laudry Room, Basement, Outdoor Garage</p>
+                    </div>
+                </div>
+                <div class="estate-price">
+                    <p><b>$5.980.000</b></p>
+                </div>
+                <div id="estate-button">
+                    <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                </div>
+            </div>
         </div>
 
         <!--Venice Properties-->
