--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -140,7 +140,7 @@
                     <p><b>$3.595.000</b></p>
                 </div>
                 <div id="estate-button">
-                    <a href="../html-files/contact.html">Contact Us</a>
+                    <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                 </div>
             </div>
             <div class="properties-container-rome-house">
@@ -171,6 +171,23 @@
                     </div>
                     <div class="estate-price">
                         <p><b>$5.980.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-container-rome-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/rome-house-buy.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>987 Wire Street</h1>
+                        <p>5 Bedrroms, 6 Bathrroms, Kitchen, Living Room, Luadry Room, Basement, 3 Cars Garage, Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$2.950.000</b></p>
                     </div>
                     <div id="estate-button">
                         <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
