--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -194,6 +194,23 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-container-rome-house-three">
+                <div class="estate-photo">
+                    <img src="../photos/italian-villa.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>234 Rose Street</h1>
+                        <p>Old Archtecture, Highly Modern, 4 Bedrooms, 6 Bathrooms, Living Room, Kithcen, Laudry Room, Outdoor Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$3.990.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!--Venice Properties-->
