--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -222,7 +222,7 @@
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1>Located In Venice</h1>
+                        <h1>345 Pope Street</h1>
                         <p>4 Bedrooms, 4 Bathrooms, Laudry Room, Kitchen, Living Room, 2 Balconies, Garden, 3 Cars Garage, Big Windows</p>
                     </div>
                 </div>
@@ -230,7 +230,41 @@
                     <p><b>$2.599.000</b></p>
                 </div>
                 <div id="estate-button-one">
-                    <a href="../html-files/contact.html">Contact Us</a>
+                    <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                </div>
+            </div>
+            <div class="properties-container-venice">
+                <div class="estate-photo">
+                    <img src="../photos/venice-beach-1.jpg.webp">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>555 Eden Street</h1>
+                        <p>4 Bedrooms, 3 Bathrooms, Living Room, Kitchen, Gated Property, Outdoor Garage, Highly Modern</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$1.890.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-container-venice-house">
+                <div class="estate-photo">
+                    <img src="../photos/venice-house-sell.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>543 Castle Rock</h1>
+                        <p>9 Bedrroms, 11 Bathrroms, Access To Grand Canal, Lving Room, Kithcen, Outdoor Garage, Basement, 2 Office Room, Library Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$8.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
                 </div>
             </div>
         </div>
