--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -257,10 +257,27 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>543 Castle Rock</h1>
-                        <p>9 Bedrroms, 11 Bathrroms, Access To Grand Canal, Lving Room, Kithcen, Outdoor Garage, Basement, 2 Office Room, Library Room</p>
+                        <p>9 Bedrooms, 11 Bathrroms, Access To Grand Canal, Lving Room, Kithcen, Outdoor Garage, Basement, 2 Office Room, Library Room</p>
                     </div>
                     <div class="estate-price">
                         <p><b>$8.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-container-venice-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/luxury-house.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 King's Landing</h1>
+                        <p><b>12 Bedrooms, 14 Bathrooms, Kitchen, Living Room, Outdoor Garage, Guest Wing, Basement, Outdoor Garage, 2 Office Room </b></p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$8.890.000</b></p>
                     </div>
                     <div id="estate-button">
                         <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
