--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -274,10 +274,27 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>123 King's Landing</h1>
-                        <p><b>12 Bedrooms, 14 Bathrooms, Kitchen, Living Room, Outdoor Garage, Guest Wing, Basement, Outdoor Garage, 2 Office Room </b></p>
+                        <p><b>12 Bedrooms, 14 Bathrooms, Kitchen, Living Room, Library, Guest Wing, Basement, Outdoor Garage, 2 Office Room </b></p>
                     </div>
                     <div class="estate-price">
                         <p><b>$8.890.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-container-venice-last">
+                <div class="estate-photo">
+                    <img src="../photos/italy-house-for-sell.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>321 Old Town</h1>
+                        <p>2 Guest Houses, 7 Bedrrooms, 9 Bathrooms, Kithcen, Living Room, Outdoor Garage, Basement, Library</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$7.210.000</b></p>
                     </div>
                     <div id="estate-button">
                         <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
