--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -312,7 +312,7 @@
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1>Located In Florence</h1>
+                        <h1>110 Lannisport</h1>
                         <p>4 Bedrooms, 3 Bathrooms, Outdoor Pool, Kitchen, Laudry Room, Living Room, Balocony, Garden, 2 Car Garge</p>
                     </div>
                 </div>
@@ -320,7 +320,24 @@
                     <p><b>$3.120.000</b></p>
                 </div>
                 <div id="estate-button-one">
-                    <a href="../html-files/contact">Contact Us</a>               
+                    <a href="../html-files/book-tour-of-house.html">Book A Tour</a>               
+                </div>
+            </div>
+            <div class="properties-container-florence">
+                <div class="estate-photo">
+                    <img src="../photos/florence-house.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>435 Gulltown</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Tower, Outdoor Garage, Guest House, Kitchen, Living Room, Balcony, Huge Carden, 1 Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$2.987.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
                 </div>
             </div>
         </div>
