updates and easter eggs

--- a/html-files/property-detail.html
+++ b/html-files/property-detail.html
@@ -42,10 +42,10 @@
 
             <div class="property-looks"> <!-- Needs Javascript to actually work, gonna fix it later-->
                 <img src="/photos/ap1.webp" alt="">
-            </div>
+            </div> <!--Tenkte å ha en slideshow-->
 
             <div class="property-info">
-                <h1>Shannons Apartments</h1>
+                <h1>Hudsons Apartments</h1>
                 <p>This property has 4 rooms in total, <br>That includes:</p>
                 <div class="property-rooms">
                     <div class="rooms">
