--- a/html-files/rent.html
+++ b/html-files/rent.html
@@ -131,12 +131,11 @@
                 <div class="properties-rent">
 
                     <div class="rentals">
-
                         <div class="property">
                             <a href="property-detail.html">
                                 <img src="/photos/ap1.webp" alt="">
                                 <div class="property-text">
-                                    <h2>Shannons Apartments</h2>
+                                    <h2>Hudsons Apartments</h2>
                                     <p>22B Baker Street</p>
                                     <p>4 Rooms</p>
                                     <p><span>1200 $ pr Month</span></p>
@@ -184,6 +183,17 @@
                                     <p>Location</p>
                                     <p>Rom Amount</p>
                                     <p><span>Monthly Price</span></p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="property">
+                            <a href="property-detail.html">
+                                <img src="/photos/lasseap.jpg" alt="">
+                                <div class="property-text">
+                                    <h2>Lǎoshī</h2>
+                                    <p>Kvernhusrenen 3C</p>
+                                    <p>4 Rooms</p>
+                                    <p><span>5000 $ pr Month</span></p>
                                 </div>
                             </a>
                         </div>
