--- a/html-files/index.html
+++ b/html-files/index.html
@@ -72,7 +72,9 @@
                         </div>
                     </div>
                     <div class="filter-results">
-                        <p>See Results</p>
+                        <a href="properties-all.html">
+                            <p>See Results</p>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -80,7 +82,7 @@
 
         <!--Properties-->
         <div class="content1-properties">
-            <h2>Our Newest Properties</h2>
+            <h2>Our Newest Properties on the Market</h2>
             <div class="properties">
                 <div class="property">
                     <a href="property-detail.html">
@@ -118,6 +120,7 @@
                         </div>
                     </a>
                 </div>
+
                 <div class="property-continue">
                     <a  href="properties-all.html">
                         <div class="property-next-button">
