--- a/html-files/property-detail.html
+++ b/html-files/property-detail.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="Rent Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
-    <title>Shannons Apartments</title>
+    <title>Hudsons Apartments</title>
 </head>
 
 <body>
