--- a/html-files/properties-all.html
+++ b/html-files/properties-all.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="Rent Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
-    <title>All Properties</title>
+    <title>All Properties on Market</title>
 </head>
 
 <body>
