--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -340,6 +340,45 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-container-florence-house">
+                <div class="estate-photo">
+                    <img src="../photos/sell-my-house-fast-Florence-South-Carolina.jpg.webp">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 White Harbor</h1>
+                        <p>6 Bedrooms, 5 Bathrooms, Kitchen, Living Room, Laudry Rooom, 1 Car Garage, Sheed, Basement, Attic, 1 Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$1.210.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-container-florence-one">
+                <div class="estate-photo">
+                    <img src="../photos/49de0729a4762b157f577aca962c0d31-full.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 Blacktyde</h1>
+                        <p>4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Laudry Room, Back Porch, Front Porch, Balcony, Basement, 2 Office Rooms, Outdoor Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$2.550.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-container-florence-last">
+                <div class="estate-photo">
+                    
+                </div>
+            </div>
         </div>
 
     </main>
