--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -376,7 +376,19 @@
             </div>
             <div class="properties-container-florence-last">
                 <div class="estate-photo">
-                    
+                    <img src="../photos/4590129-01.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 Harlaw</h1>
+                        <p>3 Bedrooms, 4 Bathrooms, Kitchen, Living Room, Laudry Room, Gated Property, Basement, Highly Modern, Outdoor Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$2.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
                 </div>
             </div>
         </div>
