--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -33,6 +33,17 @@
 
     <!--Content-->
     <main class="page-body">
+        <div id="page-location-info-box">
+            <div class="page-location-info-box-text">
+                <h1>Italy Locations</h1>
+                <p>Below You Will Find All Our Properties We Are Currently Selling In Italy</p>
+                <p>Keep In Mind That The List Can Change Quickly, Thou To Our Company Working Around The Clock</p>
+                <p>With Selling Houses, Buying Houses And Constructing Houses</p>
+                <p>If You Find A House Which Caught Your Eye, Be Fast And Reach Out To Us</p>
+                <p>To Either Book A Tour Of The House Or Buy It</p>
+            </div>
+        </div>
+
         <!--Naples Properties-->
         <div class="estate-naples wrap">
             <h2>Naples Properties</h2>
