--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -34,13 +34,20 @@
     <!--Content-->
     <main class="page-body">
         <div id="page-location-info-box">
-            <div class="page-location-info-box-text">
+            <div class="property-location-info-box-text">
                 <h1>Italy Locations</h1>
                 <p>Below You Will Find All Our Properties We Are Currently Selling In Italy</p>
                 <p>Keep In Mind That The List Can Change Quickly, Thou To Our Company Working Around The Clock</p>
                 <p>With Selling Houses, Buying Houses And Constructing Houses</p>
                 <p>If You Find A House Which Caught Your Eye, Be Fast And Reach Out To Us</p>
                 <p>To Either Book A Tour Of The House Or Buy It</p>
+            </div>
+        </div>
+
+        <div id="book-a-tour-info-box">
+            <div class="book-a-tour-text">
+                <h1>How Does Booking A Tour Work?</h1>
+                <p>Each Property Listing Has A Button Which Allows You Quickly Booking A Tour Of Any House</p>
             </div>
         </div>
 
