--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -48,6 +48,9 @@
             <div class="book-a-tour-text">
                 <h1>How Does Booking A Tour Work?</h1>
                 <p>Each Property Listing Has A Button Which Allows You Quickly Booking A Tour Of Any House</p>
+                <p>But Here Comes The Fun Fact About This Service We Are Offering You</p>
+                <p>You Don't Have To Be Physcially Present For The Tour Of The House</p>
+                <p>Our Tours Offer You The Possibilty Of Taking A Tour Of THe House Through FaceTime, Zoom Or What's Up</p>
             </div>
         </div>
 
