--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -34,7 +34,7 @@
     <!--Content-->
     <main class="page-body">
         <div id="page-location-info-box">
-            <div class="property-location-info-box-text">
+            <div class="property-box-text">
                 <h1>Italy Locations</h1>
                 <p>Below You Will Find All Our Properties We Are Currently Selling In Italy</p>
                 <p>Keep In Mind That The List Can Change Quickly, Thou To Our Company Working Around The Clock</p>
@@ -44,13 +44,24 @@
             </div>
         </div>
 
-        <div id="book-a-tour-info-box">
-            <div class="book-a-tour-text">
-                <h1>How Does Booking A Tour Work?</h1>
-                <p>Each Property Listing Has A Button Which Allows You Quickly Booking A Tour Of Any House</p>
-                <p>But Here Comes The Fun Fact About This Service We Are Offering You</p>
-                <p>You Don't Have To Be Physcially Present For The Tour Of The House</p>
-                <p>Our Tours Offer You The Possibilty Of Taking A Tour Of THe House Through FaceTime, Zoom Or What's Up</p>
+        <div id="flex-three-info-boxes wrap">
+            <div id="book-a-tour-info-box">
+                <div class="property-box-text">
+                    <h1>How Does Booking A Tour Work?</h1>
+                    <p>Each Property Listing Has A Button Which Allows You Quickly Booking A Tour Of Any House</p>
+                    <p>But Here Comes The Fun Fact About This Service We Are Offering You</p>
+                    <p>You Don't Have To Be Physcially Present For The Tour Of The House</p>
+                    <p>Our Tours Offer You The Possibilty Of Taking A Tour Of THe House Through FaceTime, Zoom Or What's Up</p>
+                </div>
+            </div>
+            <div id="price-info-box">
+                <div class="property-box-text">
+                    <h1>Information About The Prices</h1>
+                    <p>Each Property We Are Selling Has A Estimated Price Which You Can See Just Above The "Book A Tour" Button</p>
+                    <p>The Price Isn't Set In Stone, We Are Fully Willing To Negotiate The Price With You</p>
+                    <p>If You Are Interested In A Property Which We Are Currently Selling Book A Tour Of The House Either Through Internett Or In Person And Negotiate The Price With The Proeprty Broker</p>
+                    <p>Since Every Broker Is In Charge Of The Price And Everything About The Property The Simplest Solution For You Will Be To Have An Open Conversasion With The Property Broker</p>
+                </div>
             </div>
         </div>
 
