trying to make a slide show

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -44,7 +44,7 @@
             <img src="/photos/houseonahand.jpeg" alt="">
             <div class="top-pic-content">
                 <div class="top-pic-text">
-                    <h2>with us you can sell, buy and look for your</h2>
+                    <h2>with us you can sell, buy and rent your</h2>
                     <h1>FUTURE HOME</h1>
                 </div>
                 <div class="top-pic-filters">
@@ -147,7 +147,7 @@
                         <p>we are partnering with Tesla, to give you a better and cheaper option of living, which is also environment friendly</p>
                     </div>
                     <div class="learn-more-button">
-                        <a href="">
+                        <a href="about.html">
                             <p>LEARN MORE</p>
                         </a>
                     </div>
@@ -170,7 +170,7 @@
                             We make sure you hit the market place and sell for the correct estimated value of your property possible, for as low as 2% fee of your brutto price we sell your property for!</p>
                     </div>
                     <div class="learn-more-button" id="selling-content-button">
-                        <a href="">
+                        <a href="about.html">
                             <p>LEARN MORE</p>
                         </a>
                     </div>
@@ -186,7 +186,7 @@
                         <p>We make sure all the partners in the process of both buying and selling, have a positive experience. As a buyer, we make sure you get what you pay for and more, learn what rights you have as a buyer and see what we can help you with.</p>
                     </div>
                     <div class="learn-more-button">
-                        <a href="">
+                        <a href="about.html">
                             <p>LEARN MORE</p>
                         </a>
                     </div>
