--- a/html-files/property-detail.html
+++ b/html-files/property-detail.html
@@ -40,29 +40,77 @@
     
         <div class="content">
 
-            <div class="property-looks"> <!-- Needs Javascript to actually work, gonna fix it later-->
-                <img src="/photos/ap1.webp" alt="">
-            </div> <!--Tenkte å ha en slideshow-->
+            <!-- Needs Javascript to actually work, gonna fix it later-->
 
-            <div class="property-info">
-                <h1>Hudsons Apartments</h1>
-                <p>This property has 4 rooms in total, <br>That includes:</p>
-                <div class="property-rooms">
-                    <div class="rooms">
-                        <h2>1 Bathroom</h2>
-                        <h2>1 Bedroom</h2>
-                        <h2>1 Kitchen</h2>
-                        <h2>1 Living Room</h2>
-                        <h2>1 Balcony</h2>
+            <div class="content-looks-info">
+
+                <div class="property-looks">
+
+                    <div class="slides">
+                        <div class="photo-number">1 / 5</div>
+                        <img src="/photos/ap1.webp" alt="">
+                        <div class="photo-room">
+                            <p>Living Room</p>
+                        </div>
                     </div>
-                    <div class="squaremeters">
-                        <h3>= 48m2</h3>
+
+                    <div class="slides">
+                        <div class="photo-number">2 / 5</div>
+                        <img src="/photos/bedroom.jpg" alt="">
+                        <div class="photo-room">
+                            <p>Bedroom</p>
+                        </div>
                     </div>
+
+                    <div class="slides">
+                        <div class="photo-number">3 / 5</div>
+                        <img src="/photos/bathroom.jpg" alt="">
+                        <div class="photo-room">
+                            <p>Bathroom</p>
+                        </div>
+                    </div>
+
+                    <div class="slides">
+                        <div class="photo-number">4 / 5</div>
+                        <img src="/photos/kitchen.jpg" alt="">
+                        <div class="photo-room">
+                            <p>Kitchen</p>
+                        </div>
+                    </div>
+
+                    <div class="slides">
+                        <div class="photo-number">5 / 5</div>
+                        <img src="/photos/balcony.jpg" alt="">
+                        <div class="photo-room">
+                            <p>Balcony</p>
+                        </div>
+                    </div>
+
+                    <a class="prev" onclick="plusSlides(-1)"><i class="fa-solid fa-arrow-left"></i></a>
+                    <a class="next" onclick="plusSlides(1)"><i class="fa-solid fa-arrow-right"></i></a>
+
                 </div>
-                <h3>Monthly Price</h3>
-                <p>$ 1200</p>
-                <div class="property-location">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4965.528411245755!2d-0.15778155807615565!3d51.51754179027588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761acdabd7f677%3A0xa3fa518b103821ce!2s22b%20Baker%20St%2C%20London%20W1U%203BW%2C%20UK!5e0!3m2!1sen!2sno!4v1712009877143!5m2!1sen!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                <div class="property-info">
+                    <h1>Hudsons Apartments</h1>
+                    <p>This property has 4 rooms in total, <br>That includes:</p>
+                    <div class="property-rooms">
+                        <div class="rooms">
+                            <h2>1 Bathroom</h2>
+                            <h2>1 Bedroom</h2>
+                            <h2>1 Kitchen</h2>
+                            <h2>1 Living Room</h2>
+                            <h2>1 Balcony</h2>
+                        </div>
+                        <div class="squaremeters">
+                            <h3>= 48m2</h3>
+                        </div>
+                    </div>
+                    <h3>Monthly Price</h3>
+                    <p>$ 1200</p>
+                    <div class="property-location">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4965.528411245755!2d-0.15778155807615565!3d51.51754179027588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761acdabd7f677%3A0xa3fa518b103821ce!2s22b%20Baker%20St%2C%20London%20W1U%203BW%2C%20UK!5e0!3m2!1sen!2sno!4v1712009877143!5m2!1sen!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
             </div>
 
