--- a/buy-files/italy.html
+++ b/buy-files/italy.html
@@ -34,7 +34,7 @@
     <!--Content-->
     <main class="page-body">
         <div id="page-location-info-box">
-            <div class="property-box-text">
+            <div id="property-box-text">
                 <h1>Italy Locations</h1>
                 <p>Below You Will Find All Our Properties We Are Currently Selling In Italy</p>
                 <p>Keep In Mind That The List Can Change Quickly, Thou To Our Company Working Around The Clock</p>
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div id="flex-three-info-boxes wrap">
+        <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
                 <div class="property-box-text">
                     <h1>How Does Booking A Tour Work?</h1>
