--- a/html-files/property-detail.html
+++ b/html-files/property-detail.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="Rent Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
+    <script src="/JavaScript/property-details.js" defer></script>
     <title>Hudsons Apartments</title>
 </head>
 
@@ -13,6 +14,7 @@
 
     <script src="https://kit.fontawesome.com/2ef99fbf3a.js" crossorigin="anonymous">
     </script>
+
 
     <!--Header-->
     <header class="page-header">
