--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -44,6 +44,27 @@
                 <p>To Either Book A Tour Of The House Or Buy It</p>
             </div>
         </div>
+
+        <div class="estate-geneva wrap">
+            <h2>Geneva Properties</h2>
+            <div class="properties-geneva">
+                <div class="estate-photo">
+                    <img src="../photos/mansionmain1.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 Old Wyk</h1>
+                        <p>OutDoor Pool, 6 Bedrooms, 7 Bathrooms, Balcony, Kithcen, Living Room, Laudry Room, Outdoor Garage, Attic, Basement</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.950.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
