--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -64,6 +64,23 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-geneva-house">
+                <div class="estate-photo">
+                    <img src="../photos/35_W3245_Snake_Rd_2039_Print__1_.0.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>333 Orkmont Pyke</h1>
+                        <p>7 Bedrooms, 9 Bathrooms, Balcony, Kitchen, Living Rooom, Laudry Room, 2 Office Room, Attic, Basement, 3 Car Garage, Libarary</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.250.00</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
