--- a/html-files/property-detail.html
+++ b/html-files/property-detail.html
@@ -58,7 +58,7 @@
 
                     <div class="slides">
                         <div class="photo-number">2 / 5</div>
-                        <img src="/photos/bedroom.jpg" alt="">
+                        <img src="/photos/bedroom2.jpg" alt="">
                         <div class="photo-room">
                             <p>Bedroom</p>
                         </div>
@@ -74,7 +74,7 @@
 
                     <div class="slides">
                         <div class="photo-number">4 / 5</div>
-                        <img src="/photos/kitchen.jpg" alt="">
+                        <img src="/photos/kitchn2.webp" alt="">
                         <div class="photo-room">
                             <p>Kitchen</p>
                         </div>
