--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -81,6 +81,17 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-geneva-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/590-S-Lake-Shore-Dr-Lake-Geneva-2021-04-12-realtordotcom.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 Riverrun</h1>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
