--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -71,7 +71,7 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>333 Orkmont Pyke</h1>
-                        <p>7 Bedrooms, 9 Bathrooms, Balcony, Kitchen, Living Rooom, Laudry Room, 2 Office Room, Attic, Basement, 3 Car Garage, Libarary</p>
+                        <p>7 Bedrooms, 9 Bathrooms, Balcony, Kitchen, Living Rooom, Laudry Room, 2 Office Room, Attic, Basement, 3 Car Garage, Library</p>
                     </div>
                     <div class="estate-price">
                         <p><b>$4.250.00</b></p>
@@ -88,7 +88,13 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>123 Riverrun</h1>
-                        <p></p>
+                        <p>12 Bedrooms, 10 Bathrooms, 4 Balconies, 4 Cars Garage, Living Room, Kitchen, Laudry Room, Attic, Basement, 2 Office Rooms, Library</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.960.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                     </div>
                 </div>
             </div>
