--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -98,6 +98,17 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-geneva-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/article-2385290-1B2ACA5B000005DC-736_964x630.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 Blackwater Bay</h1>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
