--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -105,7 +105,13 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>123 Blackwater Bay</h1>
-                        <p></p>
+                        <p>Highly Modern, 4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Laudry Room, A Lot Of Windows, Big Balcony, 3 Cars Garage, 1 Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$7.210.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                     </div>
                 </div>
             </div>
