--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -115,6 +115,16 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-geneva-house-last">
+                <div class="estate-photo">
+                    <img src="../photos/maxresdefault.jpg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1></h1>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
