--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -121,7 +121,14 @@
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
-                        <h1></h1>
+                        <h1>123 Highgarden</h1>
+                        <p>Royal Design, 10 Bedrooms, 12 Bathrooms, Living Room, Dinning Room, Kitchen, Wine Celler, Laudry Room, Back + Front Porch, Big Garage, 2 Office Rooms</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$9.560.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                     </div>
                 </div>
             </div>
