--- a/html-files/rent.html
+++ b/html-files/rent.html
@@ -131,9 +131,10 @@
                 <div class="properties-rent">
 
                     <div class="rentals">
+
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap1.webp" alt="">
+                                <img src="/photos/ap1.webp" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Hudsons Apartments</h2>
                                     <p>22B Baker Street</p>
@@ -144,7 +145,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap2.jpg" alt="">
+                                <img src="/photos/ap2.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -155,7 +156,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap3.jpg" alt="">
+                                <img src="/photos/ap3.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -166,7 +167,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap4.jpg" alt="">
+                                <img src="/photos/ap4.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -177,7 +178,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap5.jpg" alt="">
+                                <img src="/photos/ap5.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -188,7 +189,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/lasseap.jpg" alt="">
+                                <img src="/photos/lasseap.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Lǎoshī</h2>
                                     <p>Kvernhusrenen 3C</p>
@@ -199,7 +200,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap6.jpg" alt="">
+                                <img src="/photos/ap6.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -210,7 +211,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap7.jpg" alt="">
+                                <img src="/photos/ap7.jpg" alt=""width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -221,7 +222,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap8.jpg" alt="">
+                                <img src="/photos/ap8.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -232,7 +233,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap9.jpg" alt="">
+                                <img src="/photos/ap9.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -243,7 +244,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap10.jpg" alt="">
+                                <img src="/photos/ap10.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -254,7 +255,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap11.jpg" alt="">
+                                <img src="/photos/ap11.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -265,7 +266,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap12.jpg" alt="">
+                                <img src="/photos/ap12.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -276,7 +277,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap13.jpg" alt="">
+                                <img src="/photos/ap13.jpg" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -287,7 +288,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap14.webp" alt="">
+                                <img src="/photos/ap14.webp" alt="" width="485px"height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
@@ -298,7 +299,7 @@
                         </div>
                         <div class="property">
                             <a href="property-detail.html">
-                                <img src="/photos/ap15.jpg" alt="">
+                                <img src="/photos/ap15.jpg" alt="" width="485px" height="350px;">
                                 <div class="property-text">
                                     <h2>Property Name</h2>
                                     <p>Location</p>
